refactor: reorganize CSS generation and structure - Add generate-primitives script, restructure CSS files, update package.json, fix CSS variable naming

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,5 +1,5 @@
-/* Import root variables */
-@import url('../../styles/primitives-variables/root.css');
+/* Import all required variables */
+@import url('../../styles/index.css');
 
 /* Import component variables */
 @import '../../styles/component-variables/button-variables.css';
