--- a/src/styles/primitives-variables/primitive-variables.css
+++ b/src/styles/primitives-variables/primitive-variables.css
@@ -1,6 +1,6 @@
 /**
  * Generated from token_agds-global-primitives_Mode1.json
- * Generated on: 2025-02-01T17:38:55.193Z
+ * Generated on: 2025-02-01T18:49:41.093Z
  */
 
 :root {
@@ -36,7 +36,7 @@
   --colors-agds-proposal-3-blue-14-100a: #002870;
   --colors-agds-proposal-3-blue-15-100a: #001b4d;
   --colors-agds-proposal-3-blue-16-100a: #000e29;
-  --colors-agds-proposal-3-blue-intense-100-a: #0432f0;
+  --colors-agds-proposal-3-blue-intense-100a: #0432f0;
   --colors-agds-proposal-3-blue-grey-1-100a: #f8fafb;
   --colors-agds-proposal-3-blue-grey-2-100a: #eff2f6;
   --colors-agds-proposal-3-blue-grey-3-100a: #e5eaf0;
@@ -80,7 +80,7 @@
   --colors-agds-proposal-3-green-14-100a: #00702b;
   --colors-agds-proposal-3-green-15-100a: #004d1d;
   --colors-agds-proposal-3-green-16-100a: #002910;
-  --colors-agds-proposal-3-green-vivid-100-a: #00f578;
+  --colors-agds-proposal-3-green-vivid-100a: #00f578;
   --colors-agds-proposal-3-grey-1-100a: #fafafa;
   --colors-agds-proposal-3-grey-2-100a: #f2f2f2;
   --colors-agds-proposal-3-grey-3-100a: #ebebeb;
@@ -97,13 +97,13 @@
   --colors-agds-proposal-3-grey-14-100a: #383838;
   --colors-agds-proposal-3-grey-15-100a: #232323;
   --colors-agds-proposal-3-grey-16-100a: #141414;
-  --colors-agds-proposal-3-grey-black-100-a: #000000;
-  --colors-agds-proposal-3-grey-black-30-a: rgba(0, 0, 0, 0.3000);
-  --colors-agds-proposal-3-grey-black-50-a: rgba(0, 0, 0, 0.5000);
-  --colors-agds-proposal-3-grey-white-0-a: rgba(255, 255, 255, 0.0000);
-  --colors-agds-proposal-3-grey-white-100-a: #ffffff;
-  --colors-agds-proposal-3-grey-white-30-a: rgba(255, 255, 255, 0.3000);
-  --colors-agds-proposal-3-grey-white-50-a: rgba(255, 255, 255, 0.5000);
+  --colors-agds-proposal-3-grey-black-100a: #000000;
+  --colors-agds-proposal-3-grey-black-30a: rgba(0, 0, 0, 0.3000);
+  --colors-agds-proposal-3-grey-black-50a: rgba(0, 0, 0, 0.5000);
+  --colors-agds-proposal-3-grey-white-0a: rgba(255, 255, 255, 0.0000);
+  --colors-agds-proposal-3-grey-white-100a: #ffffff;
+  --colors-agds-proposal-3-grey-white-30a: rgba(255, 255, 255, 0.3000);
+  --colors-agds-proposal-3-grey-white-50a: rgba(255, 255, 255, 0.5000);
   --colors-agds-proposal-3-light-blue-1-100a: #f5fcff;
   --colors-agds-proposal-3-light-blue-2-100a: #e5f8ff;
   --colors-agds-proposal-3-light-blue-3-100a: #d6f4ff;
@@ -317,16 +317,16 @@
   --colors-ugds-neutral-100-100a: #f6f8fc;
   --colors-ugds-neutral-100-30a: rgba(246, 248, 252, 0.3000);
   --colors-ugds-neutral-100-50a: rgba(246, 248, 252, 0.5000);
-  --colors-ugds-neutral-black-100-a: #000000;
-  --colors-ugds-neutral-black-30-a: rgba(0, 0, 0, 0.3000);
-  --colors-ugds-neutral-black-50-a: rgba(0, 0, 0, 0.5000);
-  --colors-ugds-neutral-black-70-a: rgba(0, 0, 0, 0.7000);
-  --colors-ugds-neutral-black-80-a: rgba(0, 0, 0, 0.8000);
+  --colors-ugds-neutral-black-100a: #000000;
+  --colors-ugds-neutral-black-30a: rgba(0, 0, 0, 0.3000);
+  --colors-ugds-neutral-black-50a: rgba(0, 0, 0, 0.5000);
+  --colors-ugds-neutral-black-70a: rgba(0, 0, 0, 0.7000);
+  --colors-ugds-neutral-black-80a: rgba(0, 0, 0, 0.8000);
   --colors-ugds-neutral-black-text-black: #2f3641;
   --colors-ugds-neutral-grey-alert-grey: #414955;
   --colors-ugds-neutral-grey-alert-grey-light: #7c838e;
   --colors-ugds-neutral-grey-alert-grey-secondary: #606976;
-  --colors-ugds-neutral-grey-fade75-a: rgba(75, 84, 96, 0.7500);
+  --colors-ugds-neutral-grey-fade75a: rgba(75, 84, 96, 0.7500);
   --colors-ugds-neutral-grey-main-grey: #4b5460;
   --colors-ugds-neutral-grey-misc-grey-01: #9f9f9f;
   --colors-ugds-neutral-grey-misc-grey-02: #dcdcdc;
@@ -335,9 +335,9 @@
   --colors-ugds-neutral-grey-secondary-grey: #b0b7c2;
   --colors-ugds-neutral-grey-tertiary-grey: #808895;
   --colors-ugds-neutral-grey-text-grey: #c1c1c1;
-  --colors-ugds-neutral-white-100-a: #ffffff;
-  --colors-ugds-neutral-white-30-a: rgba(255, 255, 255, 0.3000);
-  --colors-ugds-neutral-white-50-a: rgba(255, 255, 255, 0.5000);
+  --colors-ugds-neutral-white-100a: #ffffff;
+  --colors-ugds-neutral-white-30a: rgba(255, 255, 255, 0.3000);
+  --colors-ugds-neutral-white-50a: rgba(255, 255, 255, 0.5000);
   --colors-ugds-red-300-100a: #ef6a7c;
   --colors-ugds-red-300-30a: rgba(239, 106, 124, 0.3000);
   --colors-ugds-red-300-50a: rgba(239, 106, 124, 0.5000);
@@ -362,46 +362,46 @@
   --colors-ugds-yellow-400-100a: #ffd200;
   --colors-ugds-yellow-400-30a: rgba(255, 210, 0, 0.3000);
   --colors-ugds-yellow-400-50a: rgba(255, 210, 0, 0.5000);
-  --dimensions-1000: 40;
-  --dimensions-1200: 48;
-  --dimensions-1300: 52;
-  --dimensions-1600: 64;
-  --dimensions-2000: 80;
-  --dimensions-2400: 96;
-  --dimensions-2800: 112;
-  --dimensions-3200: 128;
-  --dimensions-9999: 9999;
+  --dimensions-1000: 40px;
+  --dimensions-1200: 48px;
+  --dimensions-1300: 52px;
+  --dimensions-1600: 64px;
+  --dimensions-2000: 80px;
+  --dimensions-2400: 96px;
+  --dimensions-2800: 112px;
+  --dimensions-3200: 128px;
+  --dimensions-9999: 9999px;
   --dimensions-0000: 0;
-  --dimensions-0025: 1;
-  --dimensions-0050: 2;
-  --dimensions-0075: 3;
-  --dimensions-0100: 4;
-  --dimensions-0150: 6;
-  --dimensions-0200: 8;
-  --dimensions-0250: 10;
-  --dimensions-0300: 12;
-  --dimensions-0350: 14;
-  --dimensions-0400: 16;
-  --dimensions-0450: 18;
-  --dimensions-0500: 20;
-  --dimensions-0600: 24;
-  --dimensions-0800: 32;
-  --dimensions-neg-0100: -4;
-  --effects-marlo-blur-1600: 64;
+  --dimensions-0025: 1px;
+  --dimensions-0050: 2px;
+  --dimensions-0075: 3px;
+  --dimensions-0100: 4px;
+  --dimensions-0150: 6px;
+  --dimensions-0200: 8px;
+  --dimensions-0250: 10px;
+  --dimensions-0300: 12px;
+  --dimensions-0350: 14px;
+  --dimensions-0400: 16px;
+  --dimensions-0450: 18px;
+  --dimensions-0500: 20px;
+  --dimensions-0600: 24px;
+  --dimensions-0800: 32px;
+  --dimensions-neg-0100: -4px;
+  --effects-marlo-blur-1600: 64px;
   --effects-marlo-blur-0000: 0;
-  --effects-marlo-blur-0050: 2;
-  --effects-marlo-blur-0100: 4;
-  --effects-marlo-blur-0200: 8;
-  --effects-marlo-blur-0400: 16;
-  --effects-marlo-blur-0700: 28;
-  --effects-marlo-color-black-0-a: rgba(0, 0, 0, 0.0000);
-  --effects-marlo-color-black-12-a: rgba(0, 0, 0, 0.1200);
-  --effects-marlo-color-black-14-a: rgba(0, 0, 0, 0.1400);
-  --effects-marlo-color-black-20-a: rgba(0, 0, 0, 0.2000);
-  --effects-marlo-color-black-24-a: rgba(0, 0, 0, 0.2400);
-  --effects-marlo-color-black-28-a: rgba(0, 0, 0, 0.2800);
-  --effects-marlo-color-black-40-a: rgba(0, 0, 0, 0.4000);
-  --effects-marlo-color-black-48-a: rgba(0, 0, 0, 0.4800);
+  --effects-marlo-blur-0050: 2px;
+  --effects-marlo-blur-0100: 4px;
+  --effects-marlo-blur-0200: 8px;
+  --effects-marlo-blur-0400: 16px;
+  --effects-marlo-blur-0700: 28px;
+  --effects-marlo-color-black-0a: rgba(0, 0, 0, 0.0000);
+  --effects-marlo-color-black-12a: rgba(0, 0, 0, 0.1200);
+  --effects-marlo-color-black-14a: rgba(0, 0, 0, 0.1400);
+  --effects-marlo-color-black-20a: rgba(0, 0, 0, 0.2000);
+  --effects-marlo-color-black-24a: rgba(0, 0, 0, 0.2400);
+  --effects-marlo-color-black-28a: rgba(0, 0, 0, 0.2800);
+  --effects-marlo-color-black-40a: rgba(0, 0, 0, 0.4000);
+  --effects-marlo-color-black-48a: rgba(0, 0, 0, 0.4800);
   --effects-marlo-color-blue-800-0a: rgba(0, 53, 149, 0.0000);
   --effects-marlo-color-blue-800-12a: rgba(0, 53, 149, 0.1200);
   --effects-marlo-color-blue-800-14a: rgba(0, 53, 149, 0.1400);
@@ -413,19 +413,19 @@
   --effects-marlo-spread-0000: 0;
   --effects-marlo-x-0000: 0;
   --effects-marlo-y-0000: 0;
-  --effects-marlo-y-0025: 1;
-  --effects-marlo-y-0050: 2;
-  --effects-marlo-y-0100: 4;
-  --effects-marlo-y-0200: 8;
-  --effects-marlo-y-0350: 14;
-  --effects-marlo-y-0800: 32;
-  --effects-ugds-blur-1600: 64;
+  --effects-marlo-y-0025: 1px;
+  --effects-marlo-y-0050: 2px;
+  --effects-marlo-y-0100: 4px;
+  --effects-marlo-y-0200: 8px;
+  --effects-marlo-y-0350: 14px;
+  --effects-marlo-y-0800: 32px;
+  --effects-ugds-blur-1600: 64px;
   --effects-ugds-blur-0000: 0;
-  --effects-ugds-blur-0050: 2;
-  --effects-ugds-blur-0100: 4;
-  --effects-ugds-blur-0200: 8;
-  --effects-ugds-blur-0400: 16;
-  --effects-ugds-blur-0700: 28;
+  --effects-ugds-blur-0050: 2px;
+  --effects-ugds-blur-0100: 4px;
+  --effects-ugds-blur-0200: 8px;
+  --effects-ugds-blur-0400: 16px;
+  --effects-ugds-blur-0700: 28px;
   --effects-ugds-color-blue-800-0a: rgba(0, 53, 149, 0.0000);
   --effects-ugds-color-blue-800-12a: rgba(0, 53, 149, 0.1200);
   --effects-ugds-color-blue-800-14a: rgba(0, 53, 149, 0.1400);
@@ -445,43 +445,43 @@
   --effects-ugds-spread-0000: 0;
   --effects-ugds-x-0000: 0;
   --effects-ugds-y-0000: 0;
-  --effects-ugds-y-0025: 1;
-  --effects-ugds-y-0050: 2;
-  --effects-ugds-y-0100: 4;
-  --effects-ugds-y-0200: 8;
-  --effects-ugds-y-0350: 14;
-  --effects-ugds-y-0800: 32;
-  --text-font-family-eurostile-lt-std: Eurostile LT Std;
-  --text-font-family-roboto: Roboto;
-  --text-font-family-sofia-pro: Sofia Pro;
-  --text-font-family-utopia-std: Utopia Std;
-  --text-font-size-1000: 40;
-  --text-font-size-1200: 48;
-  --text-font-size-1400: 56;
-  --text-font-size-1500: 60;
-  --text-font-size-1800: 72;
-  --text-font-size-2000: 80;
-  --text-font-size-2200: 88;
-  --text-font-size-2400: 96;
-  --text-font-size-3000: 120;
-  --text-font-size-0225: 9;
-  --text-font-size-0250: 10;
-  --text-font-size-0275: 11;
-  --text-font-size-0300: 12;
-  --text-font-size-0325: 13;
-  --text-font-size-0350: 14;
-  --text-font-size-0400: 16;
-  --text-font-size-0450: 18;
-  --text-font-size-0500: 20;
-  --text-font-size-0525: 21;
-  --text-font-size-0550: 22;
-  --text-font-size-0600: 24;
-  --text-font-size-0650: 26;
-  --text-font-size-0675: 27;
-  --text-font-size-0700: 28;
-  --text-font-size-0750: 30;
-  --text-font-size-0800: 32;
-  --text-font-size-0900: 36;
+  --effects-ugds-y-0025: 1px;
+  --effects-ugds-y-0050: 2px;
+  --effects-ugds-y-0100: 4px;
+  --effects-ugds-y-0200: 8px;
+  --effects-ugds-y-0350: 14px;
+  --effects-ugds-y-0800: 32px;
+  --text-font-family-eurostile-lt-std: "Eurostile LT Std";
+  --text-font-family-roboto: "Roboto";
+  --text-font-family-sofia-pro: "Sofia Pro";
+  --text-font-family-utopia-std: "Utopia Std";
+  --text-font-size-1000: 40px;
+  --text-font-size-1200: 48px;
+  --text-font-size-1400: 56px;
+  --text-font-size-1500: 60px;
+  --text-font-size-1800: 72px;
+  --text-font-size-2000: 80px;
+  --text-font-size-2200: 88px;
+  --text-font-size-2400: 96px;
+  --text-font-size-3000: 120px;
+  --text-font-size-0225: 9px;
+  --text-font-size-0250: 10px;
+  --text-font-size-0275: 11px;
+  --text-font-size-0300: 12px;
+  --text-font-size-0325: 13px;
+  --text-font-size-0350: 14px;
+  --text-font-size-0400: 16px;
+  --text-font-size-0450: 18px;
+  --text-font-size-0500: 20px;
+  --text-font-size-0525: 21px;
+  --text-font-size-0550: 22px;
+  --text-font-size-0600: 24px;
+  --text-font-size-0650: 26px;
+  --text-font-size-0675: 27px;
+  --text-font-size-0700: 28px;
+  --text-font-size-0750: 30px;
+  --text-font-size-0800: 32px;
+  --text-font-size-0900: 36px;
   --text-font-style-italic: Italic;
   --text-font-weight-bold: Bold;
   --text-font-weight-demi: Demi;
@@ -489,38 +489,38 @@
   --text-font-weight-medium: Medium;
   --text-font-weight-regular: Regular;
   --text-font-weight-semibold: SemiBold;
-  --text-letter-spacing-marlo-lg: 1;
+  --text-letter-spacing-marlo-lg: 1px;
   --text-letter-spacing-marlo-none: 0;
-  --text-letter-spacing-marlo-sm: 0.5;
-  --text-letter-spacing-marlo-xl: 2;
-  --text-letter-spacing-marlo-xs: 0.25;
-  --text-letter-spacing-ugds-neg-xl: -8;
-  --text-line-height-1000: 40;
-  --text-line-height-1200: 48;
-  --text-line-height-1350: 54;
-  --text-line-height-1400: 56;
-  --text-line-height-1500: 60;
-  --text-line-height-1600: 64;
-  --text-line-height-1700: 68;
-  --text-line-height-1800: 72;
-  --text-line-height-1900: 76;
-  --text-line-height-2000: 80;
-  --text-line-height-2400: 96;
-  --text-line-height-2800: 112;
-  --text-line-height-3000: 120;
-  --text-line-height-3200: 128;
-  --text-line-height-4000: 160;
-  --text-line-height-4200: 168;
-  --text-line-height-0275: 11;
-  --text-line-height-0300: 12;
-  --text-line-height-0350: 14;
-  --text-line-height-0400: 16;
-  --text-line-height-0450: 18;
-  --text-line-height-0500: 20;
-  --text-line-height-0600: 24;
-  --text-line-height-0675: 27;
-  --text-line-height-0700: 28;
-  --text-line-height-0750: 30;
-  --text-line-height-0800: 32;
-  --text-line-height-0900: 36;
+  --text-letter-spacing-marlo-sm: 0.5px;
+  --text-letter-spacing-marlo-xl: 2px;
+  --text-letter-spacing-marlo-xs: 0.25px;
+  --text-letter-spacing-ugds-neg-xl: -8px;
+  --text-line-height-1000: 40px;
+  --text-line-height-1200: 48px;
+  --text-line-height-1350: 54px;
+  --text-line-height-1400: 56px;
+  --text-line-height-1500: 60px;
+  --text-line-height-1600: 64px;
+  --text-line-height-1700: 68px;
+  --text-line-height-1800: 72px;
+  --text-line-height-1900: 76px;
+  --text-line-height-2000: 80px;
+  --text-line-height-2400: 96px;
+  --text-line-height-2800: 112px;
+  --text-line-height-3000: 120px;
+  --text-line-height-3200: 128px;
+  --text-line-height-4000: 160px;
+  --text-line-height-4200: 168px;
+  --text-line-height-0275: 11px;
+  --text-line-height-0300: 12px;
+  --text-line-height-0350: 14px;
+  --text-line-height-0400: 16px;
+  --text-line-height-0450: 18px;
+  --text-line-height-0500: 20px;
+  --text-line-height-0600: 24px;
+  --text-line-height-0675: 27px;
+  --text-line-height-0700: 28px;
+  --text-line-height-0750: 30px;
+  --text-line-height-0800: 32px;
+  --text-line-height-0900: 36px;
 }
