--- a/src/styles/semantics-variables/index.css
+++ b/src/styles/semantics-variables/index.css
@@ -6,3 +6,7 @@
 
 /* Import display variables */
 @import url('./display.css'); 
+@import url('./display-semantic-variables.css');
+
+/* Import semantic variables */
+@import url('./theme-semantic-variables.css');
